// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpotlightSidebar renders children 1`] = `
<div
  className="spotlight__aside"
>
  <div>
    My Child
  </div>
  <style
    jsx={true}
  >
    
        overflow: visible;
        
        
      
  </style>
</div>
`;

exports[`SpotlightSidebar renders correctly 1`] = `
<div
  className="spotlight__aside"
>
  <style
    jsx={true}
  >
    
        overflow: visible;
        
        
      
  </style>
</div>
`;

exports[`SpotlightSidebar renders with the specified class name 1`] = `
<div
  className="spotlight__aside spotlight__aside--no-margin"
>
  <style
    jsx={true}
  >
    
        overflow: visible;
        
        
      
  </style>
</div>
`;

exports[`SpotlightSidebar renders with the specified width 1`] = `
<div
  className="spotlight__aside"
>
  <style
    jsx={true}
  >
    
        overflow: visible;
        
        width: 300px;
      
  </style>
</div>
`;
